# nixos

./: .gitignore  README.md  bootstrap-dotfiles.sh  first-run.sh  flake.nix  update-setup.sh
dotfiles/: first-run.sh  flake.nix  result
dotfiles/docs/superpowers/plans/: 2026-03-15-applaunder.md  2026-03-15-dock-improvements.md  2026-03-15-quickpanel-neon-grid.md
dotfiles/docs/superpowers/specs/: 2026-03-15-dock-improvements-design.md  2026-03-15-quickpanel-redesign-design.md
dotfiles/flakes/Quickpanel/: README.md  flake.nix
dotfiles/flakes/Quickpanel/qml/: AppLauncher.qml  AppLauncherItem.qml  AppMenuButton.qml  BatteryRow.qml  BluetoothDropdown.qml  CtrlButton.qml  Dock.qml  DockItem.qml  PinnedItem.qml  PlayerTab.qml  QuickPanel.qml  StatusRow.qml  StatusTab.qml  VolumeSlider.qml  WifiDropdown.qml  shell.qml
dotfiles/flakes/flutter-dev/: flake.nix
dotfiles/flakes/hyprfrost/: CMakeLists.txt  README.md  flake.nix
dotfiles/flakes/hyprfrost/src/: FrostedGlassDecoration.cpp  FrostedGlassDecoration.hpp  globals.hpp  main.cpp  shaders.hpp
dotfiles/flakes/liquid_glass/: CMakeLists.txt  flake.nix
dotfiles/flakes/liquid_glass/src/: GlassRenderer.cpp  GlassRenderer.hpp  LiquidGlass.cpp  LiquidGlass.hpp  main.cpp
dotfiles/flakes/liquid_glass/src/shaders/: ShaderSources.hpp.in  liquid_glass.frag  liquid_glass.vert
dotfiles/home/luna/: home.nix
dotfiles/home/luna/modules/: ghostty.nix  git.nix  gpg.nix  hyprland.nix  hyprlock.nix  hyprpaper.nix  neovim.nix  nerdfetch-bash.nix  nwg-dock.nix  ohmyposh.nix  waybar.nix  yazi.nix
dotfiles/home/luna/modules/default-hyprland/: autostart.nix  binds.nix  default.nix  env.nix  hyprlock.nix  hyprpaper.nix  look.nix  starship.nix  theme.nix  waybar.nix  wofi.nix
dotfiles/home/luna/modules/default-hyprland/hyprland/: binds.nix  look.nix  rules.nix
dotfiles/home/luna/modules/default-hyprland/plugins/: liquid-glass-plugin.nix
dotfiles/home/luna/modules/default-hyprland/scripts/: waybar-toggle.sh
dotfiles/home/luna/modules/desktops/hyprland/: autostart.nix  binds.nix  default.nix  input.nix  look.nix  monitors.nix  rules.nix  vars.nix
dotfiles/home/luna/modules/desktops/niri/: niri.nix
dotfiles/home/luna/modules/hypr-macos/: bindss.nix  default.nix  dock.nix  env.nix  ghostty.nix  hyprland.nix  hyprlock.nix  hyprpaper.nix  liquid-glass.nix  notifications.nix  rofi.nix  rules.nix  theme.nix  waybar.nix
dotfiles/home/luna/modules/hyprland/: autostart.nix  look.nix  rules.nix
dotfiles/home/luna/modules/quickshell/: caelestia-shell.nix  default.nix  overview.nix  quickshell-bar-dock.nix  quickshell-sidebar.nix  shell.qml
dotfiles/home/luna/modules/quickshell/caelestia-shell/modules/: IdleMonitors.qml
dotfiles/home/luna/modules/quickshell/caelestia-shell/services/: IdleInhibitor.qml
dotfiles/home/luna/modules/quickshell/components/: Bar.qml  BluetoothIndicator.qml  Dock.qml  GlassRect.qml  IconButton.qml  MprisMini.qml  SideBar.qml  Sidebar.qml  TopPopup.qml  Tray.qml  WifiIndicator.qml  WorkspaceSwitcher.qml
dotfiles/hosts/laptop/: default.nix  hardware-configuration.nix
dotfiles/modules/: aliases.nix  boot.nix  docker.nix  locale.nix  networking.nix  nix.nix  packages.nix  styling.nix  users.nix
dotfiles/modules/desktop/: hyprland.nix  kde.nix  niri.nix  portals.nix
dotfiles/modules/hardware/: nvidia-alternative.nix
dotfiles/pkgs/teamspeak6/: default.nix
home/luna/: home.nix
home/luna/modules/: cursor.nix  hyprland.nix  hyprpaper.nix  neovim.nix  waybar.nix  wofi.nix  yazi.nix
hosts/laptop/: default.nix
modules/: docker.nix
modules/desktop/: display-manager.nix
modules/hardware/: nvidia-alternative.nix
